# analytics-lab

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: dbt-ci.yml  eurostat-refresh.yml
data/: warehouse.duckdb
data/raw/: finance_prices_2026-02-14.parquet
data/raw/dt=2026-02-11/: order_lines.csv  orders.csv  products.csv  refunds.csv
data/raw/dt=2026-02-12/: order_lines.csv  orders.csv  products.csv  refunds.csv
data/raw/dt=2026-02-13/: order_lines.csv  orders.csv  products.csv  refunds.csv
data/raw/dt=2026-02-14/: order_lines.csv  orders.csv  products.csv  refunds.csv
data/raw/dt=2026-02-15/: order_lines.csv  orders.csv  products.csv  refunds.csv
data/raw/dt=2026-02-16/: order_lines.csv  orders.csv  products.csv  refunds.csv
data/raw/dt=2026-02-17/: order_lines.csv  orders.csv  products.csv  refunds.csv
data/raw/eurostat/: consumer_confidence.parquet  gdp.parquet  gov_deficit_debt.parquet  hicp_inflation.parquet  interest_rates.parquet  unemployment.parquet
dbt/analytics_project/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  profiles.yml.example
dbt/analytics_project/macros/: generate_schema_name.sql
dbt/analytics_project/tests/: recon_order_amounts_match.sql  recon_order_counts_match.sql  silver_order_lines_non_negative_quantity.sql
ingestion/: eurostat_ingest.py  finance_ingest.py  hakio_data_project.py
logs/: daily_dbt_status.json
notebooks/: eurostat_analysis.html  eurostat_analysis.ipynb
orchestration/: run_daily_dbt.ps1  run_eurostat.sh
(+50 files in other folders)
