[project]
name = "analytics-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "dbt-databricks>=1.10.0",
    "dbt-postgres>=1.10.0",
    "duckdb>=1.4.4",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "requests>=2.32.0",
    "yfinance>=1.1.0",
    "pytest>=8.4.2",
]
