[project]
name = "analytics-lab"
version = "0.1.0"
description = "End-to-end analytics platform: Eurostat macroeconomic data, e-commerce, and finance pipelines powered by dbt + DuckDB."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.4",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "requests>=2.32.0",
    "pytest>=8.4.2",
    "ipykernel>=7.2.0",
    "plotly>=6.6.0",
    "numpy>=2.4.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
cloud = [
    "dbt-databricks>=1.10.0",
    "dbt-postgres>=1.10.0",
]
finance = [
    "yfinance>=1.1.0",
]

[project.scripts]
pipeline = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]
